fix dark mode toggle

--- a/src/scss/layout/_features.scss
+++ b/src/scss/layout/_features.scss
@@ -65,7 +65,7 @@
 	}
 }
 
-@include media( '>medium' ) {
+@include media('>medium') {
 
 	.features {
 		position: relative;
@@ -82,11 +82,11 @@
 		&::before {
 			content: '';
 			width: 100%;
-		    height: 300px;
-		    position: absolute;
-		    left: 0;
-		    top: 168px;
-		    background: linear-gradient(to bottom, rgba(color(primary, 1), 0), rgba(color(primary, 1), .04));
+			height: 300px;
+			position: absolute;
+			left: 0;
+			top: 168px;
+			// background: linear-gradient(to bottom, rgba(color(primary, 1), 0), rgba(color(primary, 1), .04));
 
 			.lights-off & {
 				display: none;
